src/scss/_base.scss
/* ... */
// Generic setup styling -------------------------------------------------------------------------

// helper classes ---------
.calign {
  text-align: center;
}

.large-text {
  font-size: 1.6em;
}

.brand-color {
  color: var(--brand-color);
}

// generic-entry ----------------
.generic-entry {
  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.07);
  border-radius: 5px;
  margin-bottom: 0.5em;
  padding: 1em;
  background: #fff;
}

// root --------------------------
#root {
  position: relative;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  overflow: hidden;
}

// page content ------------------

.app-logo-mob {
  width: 200px;
}

.page-content {
  position: relative;
  top: var(--app-header-height);
  left: 0;
  right: 0;
  bottom: var(--app-header-height);
  // overflow-y: scroll;
  padding: 1em;

  &.no-pad {
    padding: 0;
  }

  min-height: 80vh;
  margin-bottom: 10vh;
}

.page-content-post {
  position: relative;
  top: var(--app-header-height);
  left: 0;
  right: 0;
  bottom: 0;
  // overflow-y: scroll;
  padding: 1em;

  &.no-pad {
    padding: 0;
  }

  min-height: 80vh;
  margin-bottom: 10vh;
}

.page-centered {
  display: flex;
  align-items: center;
  justify-content: center;
}

.page-title {
  font-family: var(--body-font-family);
}

// page forms -----------------------------------
.profile,
.editProfile,
.add-product {
  margin-top: 1vw;
  margin-bottom: 2vw;
  padding-bottom: var(--app-header-height);
}

// profile ---------------------------------------
.prof-border {
  margin-top: 20px;
  max-width: 800px;
  padding: 20px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  border: 4px solid #fff;
  background-color: rgba(255, 255, 255, 0.3);
  border-radius: 25px;
  height: auto;
}

.prof-txt {
  color: var(--brand-color);
}

.prof-txt-secondary {
  color: #fff;
}



// SIGN IN + SIGN UP ----------------------------------------------------------------------
.sign-in {
  //max-height: 100vh;
  // margin-bottom: var(--app-header-height);
  // position: relative;
  // top: var(--app-header-height);
  left: 0;
  right: 0;
  bottom: 0;
  // overflow-y: scroll;
  padding: 1em;
}

.signinup-box,
.signup-box {
  width: 60vw;
  text-align: center;
  // min-height: max-content;
}

.signinup-box {
  margin-bottom: none !important;
}

.signinup-logo {
  width: 20em;
  margin: 1.2vw 0;
  margin-left: auto;
  margin-right: auto;
  margin-top: 8.5vw;
}

.sign-up-level {
  max-width: 45%;
  min-width: 45%;
  margin: 1vw auto;
}


// HOME ----------------------------------------------------------------------------------------------------
.home-logo {
  width: 12vw;
  margin-top: 1.5vw 0;
  height: auto;
}

.social-media-box {
  margin-top: 2em;
  padding-bottom: 4vw;
}

.follow-us {
  margin-bottom: 1em;
}

.link {
  text-decoration: none;
  color: #fff;
}

.link:hover {
  color: var(--brand-color);
}

input {
  margin-top: 1em;
}


// ABOUT US --------------------------------------------------------------------------------------------------
.about-us {
  min-height: 100vh;
  margin-bottom: 3vw;
}

.about-us-container {
  float: right;
  width: 44vw;
  text-align: left;
  margin: 2vw;
  //margin-left: 50vw;
}

.brandmark-container {
  float: left;
  margin-top: 2vw;
  margin-left: 2vw;
  margin-bottom: 4vw;
}

.about-img {
  width: 38vw;
  margin-left: 5vw;
}


// SHOP --------------------------------------------------------------------------------------------------------
.shop {
  margin-bottom: 5vw;
}


// PRODUCT PAGE ------------------------------------------------------------------------------------------------

.product-info {
  min-height: 120vh;
  margin-bottom: -9vw;
}

a.back-to-shop {
  text-align:left;

  p {
    margin-left: 6vw;
    margin-top: 0.5vw;
  }
}

a.back-to-shop:hover {
  color: var(--brand-color);
  cursor: pointer;
  text-decoration: underline;
}

.about-product {
  float: right;
  width: 52vw;
  text-align: left;
  margin: 2vw;
  margin-right: 4vw;
  //margin-left: 50vw;

  h1 {
    font-size: 50px;
    text-transform: uppercase;
  }

  h2 {
    font-size: 30px;
  }

  p {
    font-size: 18px;
  }
}

.product-image {
  float: left;
  margin-top: -0.5vw;
  margin-left: 5vw;
}

.product-img {
  width: 30vw;
  padding: 1vw;
}


// CART -----------------------------------------------------------------------------------------------------------
.cart {
  position: relative;
  margin-top: 5vw;
  padding-bottom: 10vw;

  h1 {
    padding-left: 3.5vw;
  }
}

.product-column {
  display: block;

}

.order-summary-column {
  position: absolute;
  margin-top: 1vw;
  right: 0;
  top: 0;
  padding: 2vw 0;
}


// CART POPUP -------------------------------------------------------------------------------------
.wrap {

  img {
    width: 30%;
    position: absolute;
    opacity: 40%;
    margin-left: 32vw;
    margin-top: 5vw;
  }

  .content {
    font-size: 20px;
    margin-left: 25vw;
    margin-top: 10vw;
    text-align: center;
    position: absolute;

  }
}


// ORDERS --------------------------------------------------------------------------------------------------------------

.orders {
  width: 100%;
  height: 100%;
  margin-top: 5vh;
  margin-bottom: 40vh;

  h1 {
    margin-bottom: 5vh;
  }
}

.orders-grid {
  margin-top: 2vw;
}

.orders-table {
  border: 1px solid var(--brand-color);
  border-collapse: collapse;
  width: 90%;
  margin: 0 auto;

  th,
  td {
    padding: 1vw;
    padding-left: 2vw;
    padding-right: 3vw;
  }

  tr {
    border-bottom: 1px solid var(--brand-color);
  }

  th {
    height: 5vh;
    text-align: left;
    text-transform: uppercase;
    font-weight: 400;
    background-color: var(--brand-color);
    color: var(--body-bg);
  }

  td {
    height: 2vh;
    max-width: 5vw;
    text-align: left;
    word-wrap: break-word;
  }
}

tr.customer-order:hover {
  background-color: var(--body-bg);
}
/* ... */

